도시쪽 수정

--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -56,7 +56,7 @@
         <div class="coummunity_box" th:if="${not #lists.isEmpty(board)}">
             <div class="coummunity_title" th:each="board : ${board}">
                 <button>
-                    <a th:href="@{/board/detail(boardNo=${board.boardNo})}"  th:text="${board.tripTitle}"></a>
+                    <a th:href="@{/board/details(boardNo=${board.boardNo})}"  th:text="${board.tripTitle}"></a>
 
                 </button>
             </div>
