--- a/src/main/resources/templates/nation/nation.html
+++ b/src/main/resources/templates/nation/nation.html
@@ -35,7 +35,7 @@
                 <h3>대만</h3>
             </button>
             <button type="button" class="best_btn" data-id="4" onclick="goToDetail(this)">
-                <img src="/imgs/오사카.jpeg" alt="오사카">
+                <img src="/imgs/필리핀.jpeg" alt="오사카">
                 <h3>필리핀</h3>
             </button>
         </div>
@@ -44,19 +44,19 @@
     <div class="best-container">
         <div class="best-trip">
             <button type="button" class="best_btn" data-id="5" onclick="goToDetail(this)">
-                <img src="/imgs/일본1.jpeg" alt="도쿄">
+                <img src="/imgs/인도네시아.jpeg" alt="도쿄">
                 <h3>인도네시아</h3>
             </button>
             <button type="button" class="best_btn" data-id="6" onclick="goToDetail(this)">
-                <img src="/imgs/푸꾸옥.jpeg" alt="푸꾸옥">
+                <img src="/imgs/인도.jpeg" alt="푸꾸옥">
                 <h3>인도</h3>
             </button>
             <button type="button" class="best_btn" data-id="7" onclick="goToDetail(this)">
-                <img src="/imgs/타이베이.jpeg" alt="타이베이">
+                <img src="/imgs/태국.jpeg" alt="타이베이">
                 <h3>태국</h3>
             </button>
             <button type="button" class="best_btn" data-id="8" onclick="goToDetail(this)">
-                <img src="/imgs/오사카.jpeg" alt="오사카">
+                <img src="/imgs/호주.jpeg" alt="오사카">
                 <h3>호주</h3>
             </button>
         </div>
