--- a/src/main/resources/templates/package/packageDetail.html
+++ b/src/main/resources/templates/package/packageDetail.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-            integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-    />
-    <script src="/js/package/packageDetail.js" defer></script>
-    <link rel="stylesheet" href="../css/package/packageDetail.css"/>
-    <link rel="stylesheet" href="/css/header_foter/header.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Package Detail</title>
+    <link rel="stylesheet" href="/css/package/packageDetail.css">
+    <link rel="stylesheet" href="/css/header_foter/header.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/package/packageDetail.js" defer></script>
 </head>
 <body>
 <div th:replace="~{header_foter/header :: header}"></div>
 
-<div class="package-detail">
-    <div class="package-image">
-        <img th:src="${package.imageUrl}" th:alt="${package.packageTitle}"/>
-    </div>
-    <div class="package-info">
-        <h3 th:text="${package.packageTitle}"></h3>
-        <p th:text="${package.packageText}"></p>
-        <p class="travel-period">여행기간: <span th:text="${#dates.format(package.startDateTime, 'yyyy-MM-dd')} + ' ~ ' + ${#dates.format(package.endDateTime, 'yyyy-MM-dd')}"></span></p>
-        <p class="price">상품가격: <span th:text="${#numbers.formatDecimal(package.packagePrice, 0, 'COMMA', 0, 'POINT')} + '원'"></span></p>
-        <p class="people-count">총인원: <span th:text="${package.packageMax}"></span></p>
+<div class="package-detail-container">
+    <div class="package-detail">
+        <div class="package-image">
+            <img th:src="${package.imageUrl}" th:alt="${package.packageTitle}" />
+        </div>
+        <div class="package-info">
+            <h3 th:text="${package.packageTitle}"></h3>
+            <p th:text="${package.packageText}"></p>
+            <p class="travel-period">여행기간: <span th:text="${#dates.format(package.startDateTime, 'yyyy-MM-dd')} + ' ~ ' + ${#dates.format(package.endDateTime, 'yyyy-MM-dd')}"></span></p>
+            <p class="price">상품가격: <span th:text="${#numbers.formatDecimal(package.packagePrice, 0, 'COMMA', 0, 'POINT')} + '원'"></span></p>
 
-        <form id="orderForm" th:data-package-no="${package.packageNo}" method="post">
-            <label for="peopleCount">인원수:</label>
-            <input type="number" id="peopleCount" name="peopleCount" min="1" required>
-            <button type="button" id="orderButton">결제하기</button>
-        </form>
+
+            <form id="orderForm" th:data-package-no="${package.packageNO}" method="post">
+                <label for="peopleCount">인원수:</label>
+                <input type="number" id="peopleCount" name="peopleCount" min="1" required>
+                <button type="button" id="orderButton">결제하기</button>
+            </form>
+        </div>
     </div>
 </div>
 </body>
