--- a/src/main/resources/templates/business/binpage.html
+++ b/src/main/resources/templates/business/binpage.html
@@ -32,7 +32,7 @@
     </div>
     <div class="list_container">
         <div class="search_content">
-            <th:block th:if="${session.binCate == 1}">
+            <th:block th:if="${session.binCate == '1'}">
                 <select>
                     <option value="">전체</option>
                     <option value="natNO">국가</option>
@@ -44,7 +44,7 @@
                     <option value="airTime2">도착시간</option>
                 </select>
             </th:block>
-            <th:block th:if="${session.binCate == 2}">
+            <th:block th:if="${session.binCate == '2'}">
                 <select>
                     <option value="">전체</option>
                     <option value="hotelCountry">국가</option>
@@ -52,13 +52,13 @@
                     <option value="hotelPrice">가격(1박기준)</option>
                 </select>
             </th:block>
-            <th:block th:if="${session.binCate == 3}">
+            <th:block th:if="${session.binCate == '3'}">
                 <select>
                     <!-- 티켓 option 추가해주세요-->
                     <option value="">전체</option>
                 </select>
             </th:block>
-            <th:block th:if="${session.binCate == 4}">
+            <th:block th:if="${session.binCate == '4'}">
                 <select>
                     <!-- 패키지 option 추가해주세요-->
                     <option value="">전체</option>
