binpage.html 변경

--- a/src/main/resources/templates/business/binpage.html
+++ b/src/main/resources/templates/business/binpage.html
@@ -86,7 +86,7 @@
                         <th>가격(1박 기준)</th>
                         <th>관리</th>
                     </th:block>
-                    <th:block th:if="${session.binCate == '3'}'">
+                    <th:block th:if="${session.binCate == '3'}">
                         <!-- 티켓 th 추가해주세요-->
                         <th>관리</th>
                     </th:block>
