--- a/src/main/resources/static/css/board/boardList.css
+++ b/src/main/resources/static/css/board/boardList.css
@@ -200,3 +200,44 @@ body, html {
     background-color: #3b75ff;
     color: white;
 }
+
+.select-box{
+
+    width: 150px;
+    height: 35px;
+    background: url('https://freepikpsd.com/media/2019/10/down-arrow-icon-png-7-Transparent-Images.png') calc(100% - 5px) center no-repeat;
+    background-size: 20px;
+    padding: 5px 30px 5px 10px;
+    border-radius: 4px;
+    outline: 0 none;
+
+}
+
+.select-box option{
+
+      padding: 10px 0;
+      font-size: 16px;
+
+}
+
+.search-box{
+    margin-top : 50px;
+}
+
+.search-box input {
+    border: 0.5px solid #ddd ;
+    width:500px;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+}
+.search-box button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+}
