--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -44,7 +44,7 @@
                             <td>패키지</td>
                         </th:block>
                         <td>[[${order.getTitle}]]</td>
-                         </td>
+                        <td>[[${#dates.format(order.getUseDate, 'yyyy-MM-dd')}]]</td>
                         <td>[[${order.getTotalCnt}]]</td>
                         <td>[[${#dates.format(order.getOrderDate, 'yyyy-MM-dd')}]]</td>
                     </tr>
