사업자등록증 중복체크

--- a/src/main/resources/templates/login/binSignUp.html
+++ b/src/main/resources/templates/login/binSignUp.html
@@ -43,8 +43,9 @@
                 <input type="text" name="binName" id="binName" placeholder="상호명">
                 <span id="nameMsg"></span>
             </div>
-            <div class="content">
+            <div class="id_content">
                 <input type="text" name="binCode" id="binCode" placeholder="사업자등록번호">
+                <input type="button" onclick="codeCheck()" value="중복확인">
                 <span id="codeMsg"></span>
             </div>
             <div class="content">
